[project]
name = "apw_nodes"
description = "A custom node suite to augment the capabilities of the [a/AP Workflows for ComfyUI](https://perilli.com/ai/comfyui/)."
version = "1.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/alessandroperilli/apw_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "perilli"
DisplayName = "apw_nodes"
Icon = "https://apworkflows.perilli.com/APW_logo.png"